--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -9,8 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
-    <h1>HaSAN</h1>
-    
+    <div id="app">
+        <p>{{ title }}</p>
+        <p>{{ isTrue }}</p>
+        <p>{{ myArray[0] }}</p>
+        <p>{{ myObj.name }}</p>
+        <p>{{ myFunction() }}</p>
+    </div>    
     <!-- Import App.js File -->
     <script src="app.js"></script>
 </body>
