--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -15,6 +15,7 @@
         <p>{{ myArray[0] }}</p>
         <p>{{ myObj.name }}</p>
         <p>{{ myFunction() }}</p>
+        <p>{{ getTitle() }}</p>
     </div>    
     <!-- Import App.js File -->
     <script src="app.js"></script>
