--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -12,6 +12,8 @@
     <div id="app">
         <img v-bind:src="src" v-bind:alt="alt" />
         <a target="_blank" v-bind:href="link">rabiul.xyz</a>
+        <p v-text="mytext"></p>
+        <p v-html="myHtml"></p>
     </div>    
     <!-- Import App.js File -->
     <script src="app.js"></script>
