--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -9,15 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
-    <div id="app">
-      <button @click="a++">Increment</button>
-      <p>{{ a }}</p>
+    
+    <div id="app1">
+        <p>1st instance</p>
+        <button @click="changeInstance">Click</button>        
+    </div>
 
-      <img :src="link">
+    <div id="app2">
+        <p>2nd instance {{ value }}</p>
+    </div>
 
-      <input type="text" v-model="salary">
-
-    </div>    
     <!-- Import App.js File -->
     <script src="app.js"></script>
     <style>
