mount and template

--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -10,14 +10,7 @@
 </head>
 <body>
     
-    <div id="app1">
-        <p>1st instance</p>
-        <button @click="changeInstance">Click</button>        
-    </div>
-
-    <div id="app2">
-        <p>2nd instance {{ value }}</p>
-    </div>
+    <div id="app"></div>
 
     <!-- Import App.js File -->
     <script src="app.js"></script>
