--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     
-    <div id="app"></div>
+    <div id="app">
+        <name></name>
+    </div>
 
     <!-- Import App.js File -->
     <script src="app.js"></script>
