--- a/Basic-Topics/index.html
+++ b/Basic-Topics/index.html
@@ -11,7 +11,9 @@
 <body>
     
     <div id="app">
-        <name></name>
+        <button @click="updateName">Update</button>
+        <button @click="destroyName">Destory</button>
+        <p>{{ name }}</p>
     </div>
 
     <!-- Import App.js File -->
